fix for collection sheet alignment

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1339,3 +1339,8 @@ h3.bolder {
     color:red;
     font-size: 18pt
 }
+.table-cell-scrollable{
+    height:30px;
+    overflow: auto;
+    font-size: 12px;
+}
